--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/all.css">
 </head>
 <body>
+	<h1>&#9731; Привет, Ваня! &#9731;</h1>
 	Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Встретил, дорогу, пустился если там деревни свое за, на берегу правилами предупреждал несколько продолжил залетают не? Коварный осталось подпоясал, за на берегу!
 </body>
 </html>
